  full-screen mode (for questionable hardware, e.g. Poulsbo chipsets)
- MOS: *Refresh, *WinTitle and *FullScreen are now recognised on RISC OS
  builds, but do nothing. (Previously, they raised a "Not Found" error.)
  This is to allow programs written targeting other platforms a better
  chance to run correctly under RISC OS without further modification.
- BASIC: LOCAL with no parameters now does nothing (as per Acorn) instead
  of reporting an error. This new behaviour is in place on a DEFAULT_IGNORE
  build unless -strict is set, or if -ignore is set.  This can also be
  toggled at runtime with SYS"Brandy_Strict".
- BASIC: If Strict option is set, warnings are handled as fatal errors if
  a program is running.
- BASIC: Limit the recursion depth of RUN.
- BASIC: Don't choke if a numeric DATA element contains a comma (e.g.
  multi-dimensional array member or FN call)
- Graphics: Fixed multiple problems with VDU24, RECTANGLE FILL, MOUSE
  and the plot_pixel() primitive, primarily to do with the oddball MODE 22.
  Thanks to Michael Fairbank for identifying and assisting with fixing this.

* V1.22.15 - 21 March 2023
- System: For SDL builds, move ESCAPE polling to its own thread.
- System: Added CTRL+PrtSc to force immediate exit in SDL build.
  Unfortunately the Pause/Break key doesn't register in SDL. This
  functionality can be disabled with build-time option
  BRANDY_NOBREAKONCTRLPRTSC.
- System: Added some fixes to handle issues with the sdl12-compat
  library.
- System: Implemented an internal *./*CAT handler, loosely styled on BBC
  Micro ADFS output.
- System: Exit code is now ERR MOD 256 (or 255 if that would result in 0),
  or 0 if exited with no error.
  A program can still set its own exit code as a parameter to QUIT.
- System: Fixed a regression in the way floats were handled by SYS.
- System: Corrected a flawed usage of fcntl().
- MOS: Implemented OSBYTE 210
- BASIC: Extended ATN to take two parameters in parentheses, this calls
  atan2().
