@@ -43,7 +43,7 @@ extern void fullscreenmode(int onoff);
 extern void setupnewmode(int32 mode, int32 xres, int32 yres, int32 cols, int32 mxscale, int32 myscale, int32 xeig, int32 yeig);
 extern void star_refresh(int flag);
 extern int get_refreshmode(void);
-extern int32 osbyte42(int x);
+extern int32 osbyte163_2(int x);
 extern void osbyte112(int x);
 extern void osbyte113(int x);
 extern int32 osbyte134_165(int32 a);
